--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -249,6 +249,6 @@
   background-repeat: no-repeat;
   background-color: black;
   justify-content: center;
-  opacity: 90%;
+  // opacity: 0.9;
   background-size: cover;
 };
